Cambio en el perfil

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="comunidad-autoria">
         <div class="nombre">
           <!-- 2º Commit - Tu perfil Web -->
-          <p><strong>Músico Desarrollador</strong></p>
+          <p><strong>Desarrollador Web Músico</strong></p>
         </div>
       </div>
     </section>
